# ottawa-food-bank-2024

./: .gitignore  .gitmodules  .pdm-python  LICENSE  README.md  app.py  index.html  index.qmd  pyproject.toml
assets/: styles.css
scripts/: OFB_calculator.py  OFB_calculator_wo_nas.py  OFB_categorizer.py  OFB_cleaner.py  OFB_cleaner_classifier.py  OFB_cleaner_plus.py  app.py  index.html  index.ipynb  index.qmd  main.html  main.py  main.qmd
scripts/main_files/libs/bootstrap/: bootstrap.min.css
