[project]
name = "ottawa-food-bank-2024"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Caroline Mimeault",email = "carolinemimeault@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
