[project]
name = "ottawa-food-bank-2024"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Caroline Mimeault", email = "carolinemimeault@gmail.com" }]
dependencies = [
    "plotly>=5.22.0",
    "dash>=2.17.1",
    "pandas>=2.2.2",
    "ipykernel>=6.29.4",
    "matplotlib>=3.9.0",
    "pyyaml>=6.0.1",
    "nbformat>=5.10.4",
    "nbclient>=0.10.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
render = "quarto render scripts/main.qmd"
